# smi-al

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: sampling_phaseA.yaml
scripts/: 08_train_segmenter.py  gen_synthetic.py  pipeline.py
src/smi_al/: active_loop.py
src/smi_al/embeddings/: clip_embedder.py  umap_reduce.py
src/smi_al/io/: video.py
src/smi_al/metrics/: efficiency.py  seg.py
src/smi_al/propagation/: flow.py
src/smi_al/sampling/: cluster.py  cost.py  fvi.py  select.py
src/smi_al/utils/: common.py
tests/: test_clustering.py  test_fvi.py
